<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/lytContent"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/background">

    <RelativeLayout 
        android:id="@+id/lytTitleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebar">
        <TextView 
            android:id="@+id/txtTitleApp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/title_app"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>
        <ImageView
            android:id="@+id/imgAbout"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/about"
			android:contentDescription="@string/desc"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    
	<ListView
		android:id="@+id/listRecipes"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:fadeScrollbars="true"
		android:fastScrollEnabled="true"
		android:fadingEdge="none"
		android:divider="@color/separator"
		android:dividerHeight="1dp"
		android:layout_below="@+id/lytTitleBar"
		android:layout_above="@+id/lytSearch"
		android:visibility="gone"/>
	<ProgressBar 
	    android:id="@+id/prgLoading"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="@android:style/Widget.ProgressBar.Small.Inverse"
	    android:layout_centerInParent="true"	/>
	<TextView 
		android:id="@+id/txtAlert"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/alert"
		android:textColor="@color/text"
		android:textSize="14sp"
		android:layout_centerInParent="true"
		android:visibility="gone"/>

	<LinearLayout
		android:id="@+id/lytSearch"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="0dp"
		android:background="@color/search_background"
		android:gravity="center_horizontal|center"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/imgSearchNav"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:contentDescription="@string/desc"
			android:src="@drawable/nav_up" />

		<LinearLayout
			android:id="@+id/lytSearchForm"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:visibility="gone">

			<EditText
				android:id="@+id/edtSearch"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:layout_weight="1"
				android:background="@drawable/form"
				android:hint="@string/search_by"
				android:inputType="text"
				android:singleLine="true"
				android:textSize="14sp" />

			<Button
				android:id="@+id/btnSearch"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:layout_marginRight="5dp"
				android:layout_marginBottom="5dp"
				android:layout_weight="2"
				android:background="@drawable/button"
				android:text="@string/search"
				android:textColor="@color/text_button"
				android:textSize="14sp"
				android:textStyle="bold" />
		</LinearLayout>
	</LinearLayout>
    

</RelativeLayout>
